--- a/notebooks/comparison.ipynb
+++ b/notebooks/comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"postgresql+psycopg2://weather_user:supersecret@localhost:5432/weatherdb\")\n"
+    "load_dotenv()\n",
+    "engine = create_engine(os.getenv(\"DATABASE_URL\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +312,7 @@
        "[2 rows x 77 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +417,7 @@
        "feelslike_c   2.207143   2.419416"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +528,7 @@
        "6  Prague  feelslike_c    0.966  8"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,12 +542,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Conclusion from Error Tables\n",
+    "\n",
+    "The forecast accuracy for Prague varies significantly across weather metrics:\n",
+    "\n",
+    "- **Most reliable predictions** were for:\n",
+    "  - `temp_c` and `feelslike_c`: Low MAE (~2 °C), RMSE below 2.5 °C, and std_dev < 1.1 → stable and precise.\n",
+    "  - `precip_mm`: Very low error and deviation → excellent rain prediction consistency.\n",
+    "  - `pressure_mb`: Low overall error and deviation → good atmospheric pressure forecasting.\n",
+    "\n",
+    "- **Least reliable predictions** were:\n",
+    "  - `cloud` and `humidity`: High RMSE (up to 22) and std_dev (> 12–31) → forecasts fluctuated heavily and lacked accuracy.\n",
+    "\n",
+    "These results suggest that while the API provides solid short-term forecasts for core metrics (temperature, rain, pressure), **cloud coverage and humidity remain more volatile and less predictable** – which aligns with known weather modeling challenges.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "####  Measured values \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
